test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_for_downto_stmt.draco
proc main() void : for a from 1 downto 3 do a := 3; od; corp;

