test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_for_as_identifier.draco
int for;
 
proc main() void : a := 1; corp;
